--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,15 @@
 # gem "pg"
 #
 default: &default
+  <% if ENV["DATABASE_URL"].present? %>
+  url: <%= ENV["DATABASE_URL"] %>
+  <% else %>
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  <% end %>
 
 development:
   <<: *default
